# sqlrunner

./: .dockerignore  .flake8  .gitignore  .pre-commit-config.yaml  DEVELOPERS.md  Dockerfile  LICENSE  README.md  build-dependencies.txt  dependencies.txt  justfile  pyproject.toml  renovate.json5  requirements.dev.in  requirements.dev.txt  requirements.prod.in  requirements.prod.txt  requirements.uvmirror  requirements.uvmirror.txt
.github/: dependabot.yml
.github/workflows/: build_and_publish.yml  main.yml  update-dependencies.yml  uvmirror-update.yml
docker/: .env  Dockerfile  dependencies.txt  docker-compose.yml  justfile
sqlrunner/: __init__.py  __main__.py  main.py  mssql_log_utils.py  run_sql.py  utils.py
tests/: conftest.py  databases.py  docker.py  test___main__.py  test_main.py  test_mssql_log_utils.py
tests/support/mssql/: entrypoint.sh
