[project]
  name = "sqlrunner"
  version = "0.1.0"
  description = "sqlunner"
  readme = "README.md"
  requires-python = ">=3.14"

  dependencies = [
    "pymssql",
    "structlog",
    "sqlglot",
]

[tool.coverage.run]
branch = true
dynamic_context = "test_function"
omit = [".venv/*"]

[tool.coverage.report]
fail_under = 100
skip_covered = true
show_missing = true

[tool.coverage.html]
show_contexts = true

[tool.pytest.ini_options]

[tool.ruff]
line-length = 88
exclude = [
  ".direnv",
  ".git",
  ".github",
  ".ipynb_checkpoints",
  ".pytest_cache",
  ".venv",
  "__pycache__",
  "docker",
  "htmlcov",
  "venv",
]

[tool.ruff.lint]
extend-select = [
  "A",  # flake8-builtins
  "I",  # isort
  "INP",  # flake8-no-pep420
  "ISC",  # flake8-implicit-str-concat
  "UP",  # pyupgrade
  "W",  # pycodestyle warning
]
extend-ignore = [
  "E501",
  "E731",
]
isort.lines-after-imports = 2

# Note: any `exclude-newer-package` timestamps should be removed if > 7 days old
# See https://github.com/opensafely-core/repo-template/blob/main/DEVELOPERS.md for details
[tool.uv]
exclude-newer = "2026-01-21T00:00:00Z"
exclude-newer-package = {}

[dependency-groups]
dev = [
  "coverage",
  "docker",
  "pre-commit",
  "pytest",
  "ruff",
]
