[project]
  name = "sqlrunner"
  version = "0.1.0"
  description = "sqlunner"
  readme = "README.md"
  requires-python = ">=3.14"

  dependencies = [
    "pymssql<=2.3.13",
    "sqlglot<=30.6.0",
    "structlog<=25.5.0",
]

[tool.coverage.run]
branch = true
dynamic_context = "test_function"
omit = [".venv/*"]

[tool.coverage.report]
fail_under = 100
skip_covered = true
show_missing = true

[tool.coverage.html]
show_contexts = true

[tool.pytest.ini_options]

[tool.ruff]
line-length = 88
exclude = [
  ".direnv",
  ".git",
  ".github",
  ".ipynb_checkpoints",
  ".pytest_cache",
  ".venv",
  "__pycache__",
  "docker",
  "htmlcov",
  "venv",
]

[tool.ruff.lint]
extend-select = [
  "A",  # flake8-builtins
  "I",  # isort
  "INP",  # flake8-no-pep420
  "ISC",  # flake8-implicit-str-concat
  "UP",  # pyupgrade
  "W",  # pycodestyle warning
]
extend-ignore = [
  "E501",
  "E731",
]
isort.lines-after-imports = 2

[dependency-groups]
dev = [
    "coverage<=7.13.5",
    "docker<=7.1.0",
    "pre-commit<=4.6.0",
    "pytest<=9.0.3",
    "ruff<=0.15.12",
]
